Lower Java baseline and harden session artifact persistence
- Target Java 11 across builds and replace newer language/library APIs
- Add schema-v2 session manifests with artifact validation and migration
- Preserve MCP, filesystem, terminal, replay, and compatibility behavior